environments/prod/k8s/cloud-ml-mgmt/cloud-ml-manager.yaml
---
# Source: cloud-ml-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-ml-manager
  labels:
    helm.sh/chart: cloud-ml-manager-0.1.0
    app.kubernetes.io/name: cloud-ml-manager
    app.kubernetes.io/instance: dev
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cloud-ml-manager
    app.kubernetes.io/instance: dev
---
# Source: cloud-ml-manager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-ml-manager
  labels:
    helm.sh/chart: cloud-ml-manager-0.1.0
    app.kubernetes.io/name: cloud-ml-manager
    app.kubernetes.io/instance: dev
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cloud-ml-manager
      app.kubernetes.io/instance: dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloud-ml-manager
        app.kubernetes.io/instance: dev
    spec:
      serviceAccountName: cloud-ml-manager
      securityContext:
        {}
      containers:
        - name: cloud-ml-manager
          securityContext:
            {}
          image: "steveoh2/cloud-ml-manager:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8082
          readinessProbe:
            httpGet:
              path: /
              port: 8082
          resources:
            {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ml-ingress
  labels:
    helm.sh/chart: cloud-ml-manager-0.1.0
    app.kubernetes.io/name: cloud-ml-manager
    app.kubernetes.io/instance: dev
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /ml
        pathType: Prefix
        backend:
          service:
            name: cloud-ml-manager
            port:
              number: 8082
